Actualizacion de las imagenes del juego

--- a/Practica-Juego/Codigo_Juego/avatar.html
+++ b/Practica-Juego/Codigo_Juego/avatar.html
@@ -10,7 +10,7 @@
         <section id="seleccionar-personaje">
             <h1 class="titulo">EL AVATAR!</h1> <!--Esto es estatico, NO cambia, el h1 se utiliza una vez-->
             <div class="imagen">
-                <img src="/IMAGENES/_987ea3d9-437d-49f7-9ae5-9a6e622ce55a.jpeg" alt="Presentación de los personajes">
+                <img src="/IMAGENES/Principal.jpg" alt="Presentación de los personajes">
             </div>
             <!-- <div class="reglas-juego"> 
              creamos una sección para añadir las reglas del juego, utilizando la etiquetas <ol> y <li> para obtener una lista ordenada
@@ -29,24 +29,24 @@
 
             <div class="avatares">
                 <label class="personajes" for="zuko">Zuko
-                    <img src="/IMAGENES/personajes-juego/personaje1.png"/>
+                    <img src="/IMAGENES/personajes-juego/Zuko.webp"/>
                 </label> <!--Esta etiqueta es para darle un indicador a los usuarios de que están seleccionando-->
                 <input type="radio" name="personaje" id="zuko"/> <!-- name es para agrupar todos los imputs y poder seleccionar-->
 
                 <label class="personajes" for="katara">Katara
-                    <img src="/IMAGENES/personajes-juego/personaje2.png"/>
+                    <img src="/IMAGENES/personajes-juego/katara.png"/>
                 </label> <!--El atributo for ayuda a vincular un label con un imput a través del mismo id-->
                 <input type="radio" name="personaje" id="katara"/> <!--Acá van los personajes-->
 
                 <label class="personajes" for="aang">Aang
-                    <img src="/IMAGENES/personajes-juego/personaje3.png"/>
+                    <img src="/IMAGENES/personajes-juego/Aang.webp"/>
                 </label>
                 <input type="radio" name="personaje" id="aang"/> <!--Le damos un atributo id para saber cual es el valor de cada uno-->
 
                 <label class="personajes" for="toph">Toph
-                    <img src="/IMAGENES/personajes-juego/personaje4.png">
+                    <img src="/IMAGENES/personajes-juego/toph.png">
                 </label>
-                <input type="radio" name="personaje" id="toph"/>
+                <input type="radio" name="personaje" id="Toph"/>
             </div>
 
 
@@ -60,14 +60,14 @@
 
             <div> 
                 <button id= "boton-punio" class="ataque">Puño
-                    <img src="/IMAGENES/golpes/_619731e5-0beb-46f6-9c64-bd4bda90b3f6.jpeg"/></button>
+                    <img src="/IMAGENES/golpes/puño.png"/></button>
 
                 <button id="boton-patada" class="ataque">Patada
-                    <img src="/IMAGENES/golpes/_3b376025-3cde-4f3a-ba5d-a3b5ea30a8a4.jpeg"/> </button>
+                    <img src="/IMAGENES/golpes/patada.png"/> </button>
                     
                     
                 <button id="boton-barrida" class="ataque">Barrida
-                    <img src="/IMAGENES/golpes/_06803b4d-255b-46fc-809f-64268aeaa806.jpeg"></button>
+                    <img src="/IMAGENES/golpes/barrida.png"></button>
             </div>
 
             <div id="mensajes">
