--- a/Bases de datos/HTML-CSS/index.html
+++ b/Bases de datos/HTML-CSS/index.html
@@ -10,6 +10,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="./css/columnas.css">
+        <link rel="stylesheet" href="./css/estilo.css">
     </head>
 
     <body>
@@ -37,7 +39,7 @@
         <div id="top">
             <ul>
                 <li>
-                    <img src="/img/th (1).jpeg" width="100">
+                    <img src="./img/OIG1.jpeg" width="100">
                     
                     <h1>Lorem ipsum</h1>
                     <p>
@@ -46,7 +48,7 @@
                 </li>
 
                 <li>
-                    <img src="/img/th (2).jpeg" width="100">
+                    <img src="./img/th (1).jpeg" width="100">
 
                     <h1>Lorem ipsum</h1>
                     <p>
@@ -55,7 +57,7 @@
                 </li>
 
                 <li>
-                    <img src="/img/th.jpeg" width="100">
+                    <img src="./img/th (2).jpeg" width="100">
 
                     <h1>Lorem ipsum</h1>
                     <p>
@@ -79,7 +81,7 @@
             <article>
                 <h1>Lorem ipsum</h1>
                     <p>
-                        <img src="/img/OIG1.jpeg" width="200">
+                        <img src="./img/th.jpeg" width="200">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione rerum, beatae pariatur nam temporibus tenetur odit incidunt expedita maxime odio quo ex consequatur, dolorum fuga nulla mollitia perspiciatis. Ratione, amet.
                     </p>
                     <br>
