--- a/EcommerceMP/client/index.html
+++ b/EcommerceMP/client/index.html
@@ -5,20 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
+    <title>StyleHub- Ecommerce</title>
+    <link rel="icon" type="image/png" href="media/logo.png">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <script src="https://sdk.mercadopago.com/js/v2"></script>
-
-    <title>Document</title>
 </head>
 
-<body>
-    <!--shop content-->
-    <div class="card-products-container">
-        <div class="card-products" id="shopContent"></div>
-    </div>
+<body class="bg-gray-50">
+    <header class="bg-white shadow-lg">
+        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <!-- Logo o nombre del sitio -->
+            <div class="flex items-center space-x-2">
+                <img src="media/logo.png" alt="StyleHub Logo" class="h-10 w-10">
+                <!-- Agregar un logo, o eliminar si prefieres solo texto -->
+                <span class="text-3xl font-extrabold tracking-tight text-gray-900">StyleHub</span>
+            </div>
+
+            <!-- Enlaces de navegación -->
+            <div class="hidden md:flex items-center space-x-8">
+                <a href="#"
+                    class="text-lg font-medium text-gray-600 hover:text-gray-900 transition-colors duration-300 border-b-2 border-transparent hover:border-gray-900">Inicio</a>
+                <a href="#"
+                    class="text-lg font-medium text-gray-600 hover:text-gray-900 transition-colors duration-300 border-b-2 border-transparent hover:border-gray-900">Acerca
+                    de</a>
+                <a href="#"
+                    class="text-lg font-medium text-gray-600 hover:text-gray-900 transition-colors duration-300 border-b-2 border-transparent hover:border-gray-900">Contacto</a>
+            </div>
+
+    </header>
+
+
+    <main class="container mx-auto px-6 py-8">
+        <h1 class="page-title text-5xl font-extrabold text-gray-900 mb-8">Nuestra Última Colección</h1>
+
+        <!--shop content-->
+        <div class="card-products-container">
+            <div class="card-products" id="shopContent"></div>
+        </div>
+    </main>
 
 
     <!--cart btn-->
-    <div class="cart-btn" id="cart-btn">🛒</div>
+    <div class="cart-btn" id="cart-btn">
+        <i class="fas fa-shopping-cart"></i>
+    </div>
 
     <!--cart counter-->
     <span class="cart-counter" id="cart-counter">0</span>
@@ -27,11 +58,9 @@
     <div class="modal-overlay" id="modal-overlay"></div>
     <div class="modal-container" id="modal-container"></div>
 
-
     <script src="js/products.js"></script>
     <script src="js/index.js"></script>
     <script src="js/cart.js"></script>
-
 </body>
 
 </html>
