modificanto archivos frontend

--- a/Proyect_final/client/index.html
+++ b/Proyect_final/client/index.html
@@ -13,7 +13,7 @@
     <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 
-<body class="bg-gray-50">
+<body>
     <header>
         <nav class="flex justify-between items-center py-5 bg-green-500 text-white px-6 shadow-md">
             <div class="flex items-center">
@@ -36,10 +36,10 @@
         </nav>
     </header>
 
-    <!--Productos-->
-    <div class="products" id="products">
+    <!--shop content-->
+    <div class="card-products-container">
         <h1>Productos</h1>
-        <div id="shopContent"></div>
+        <div class="card-products" id="shopContent"></div>
     </div>
     
 
