--- a/Proyect_final/client/index.html
+++ b/Proyect_final/client/index.html
@@ -44,12 +44,14 @@
     
 
     <!--cart btn-->
-    <div class="cart-btn" id="cart-btn">
-        <i class="fas fa-shopping-cart"></i>
+    <div class="cart-btn-container">
+        <div class="cart-btn" id="cart-btn">
+            <i class="fas fa-shopping-cart"></i>
+            <!--cart counter-->
+        <span class="cart-counter" id="cart-counter">0</span>
+        </div>
     </div>
     
-    <!--cart counter-->
-    <span class="cart-counter" id="cart-counter">0</span>
 
     <!--modal-->
     <div class="modal-overlay" id="modal-overlay"></div>
