--- a/Proyect_final/client/index.html
+++ b/Proyect_final/client/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <script src="https://sdk.mercadopago.com/js/v2"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Noto+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="font-sans">
     <header>
         <nav class="flex justify-between nav items-center py-5 text-white px-6 shadow-md">
             <div class="flex items-center">
@@ -25,51 +26,64 @@
                 <li><a href="/logout" class="nav-link bg-red-500 hover:bg-red-700 py-2 px-4 rounded-md">Salir</a></li>
             </ul>            
         </nav>
+        <nav class="bg-black">
+            <div class="relative bg-black overflow-hidden h-10">
+                <div class="scroll-text-wrapper absolute top-0 w-full h-full flex items-center whitespace-nowrap">
+                    <p class="text-white text-lg font-bold mr-10">
+                        ¡Bienvenidos a nuestra tienda online!
+                    </p>
+                    <p class="text-white text-lg font-bold mr-12">
+                        Donde encontrarás las últimas tecnologías y productos destacados
+                    </p>
+                    <p class="text-white text-lg font-bold mr-12">
+                        ¡Promos imperdibles en productos seleccionados!
+                    </p>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- Carousel de Imágenes -->
     <div class="carousel-container">
         <div class="carousel">
-            <div class="carousel-item active"><img src="/media/carousel/903130540.webp" alt="Imagen 1"></div>
-            <div class="carousel-item"><img src="/media/carousel/1600w-9SMo1LIFEJg.webp" alt="Imagen 2"></div>
-            <div class="carousel-item"><img src="/media/carousel/1600w-i47UC7LCA4A.webp" alt="Imagen 3"></div>
+            <div class="carousel-item active"><img src="/media/carousel/banner.webp" alt="Imagen 1"></div>
+            <div class="carousel-item"><img src="/media/carousel/banner2.webp" alt="Imagen 2"></div>
+            <div class="carousel-item"><img src="/media/carousel/banner3.webp" alt="Imagen 3"></div>
         </div>
         <button class="prev">&#10094;</button>
         <button class="next">&#10095;</button>
     </div>
 
-    <!-- Presentación -->
-    <div class="presentacion">
-        <h1>Bienvenidos a nuestra tienda online</h1>
-        <h2>Donde encontrarás las últimas tecnologías y productos destacados</h2>
-    </div>
-
     <!-- Categorías -->
     <div class="container mx-auto">
-        <h1 class="categorias">Categorías</h1>
+        <h1 class="text-4xl font-bold text-gray-700 font-montserrat tracking-wide text-center m-10">
+            CATEGORIAS
+          </h1>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 ml-16">
-            <!-- Tarjetas de Categoría -->
-            <div class="bg-white rounded-3xl shadow-md p-4 max-w-sm">
-                <h3>Variedad de <span class="font-bold">Notebooks</span></h3>
-                <img src="./media/img/noteboock.jpg" alt="Notebook" class="my-3 w-36">
+            <div class="card-container">
+                <img src="./media/img/PCelulares.png" alt="Notebook">
             </div>
-            <div class="bg-white rounded-3xl shadow-md p-4 max-w-sm">
-                <h3>Auriculares <span class="font-bold">inalámbricos</span></h3>
-                <img src="./media/img/inalambricos.jpg" alt="Auriculares" class="my-3 w-36">
+            <div class="card-container">
+                <img src="./media/img/Pinalambricos.png" alt="Notebook">
             </div>
-            <div class="bg-white rounded-3xl shadow-md p-4 max-w-sm">
-                <h3>Novedades en <span class="font-bold">Teclados</span></h3>
-                <img src="./media/img/teclado.jpg" alt="Teclado" class="my-3 w-36">
-            </div>
-            <!-- Agrega más tarjetas aquí según sea necesario -->
+            <div class="card-container">
+                <img src="./media/img/PAuriculares.png" alt="Notebook">
+            </div>                   
         </div>
     </div>
 
     <!-- Productos -->
-    <div class="card-products-container" id="productos">
-        <h1 class="productos">Productos</h1>
-        <div class="card-products" id="shopContent"></div>
-    </div>
+     <section class="container">
+        <div class="card-products-container m-5" id="productos">
+            <div class="text-center mb-10">
+                <h1 class="text-4xl font-bold text-gray-700 font-montserrat tracking-wide text-center m-10">
+                    PRODUCTOS
+                </h1>
+            </div>
+            <div class="card-products" id="shopContent"></div>
+        </div>
+     </section>
+    
 
     <section class="offers-section py-8 bg-gray-100">
       <div class="container mx-auto px-4" id="ofertas">
@@ -95,5 +109,21 @@
     <script src="js/products.js"></script>
     <script src="js/index.js"></script>
     <script src="js/cart.js"></script>
+
+    <style>
+      @keyframes scroll {
+        0% {
+          transform: translateX(100%);
+        }
+        100% {
+          transform: translateX(-100%);
+        }
+      }
+
+      .scroll-text-wrapper {
+        animation: scroll 18s linear infinite;
+      }
+    </style>
+
 </body>
 </html>
