se agrega sección "nosostros"

--- a/Proyect_final/client/index.html
+++ b/Proyect_final/client/index.html
@@ -20,8 +20,8 @@
             </div>
             <ul class="flex space-x-8">
                 <li><a href="#productos" class="text-lg font-medium hover:text-gray-300">Productos</a></li>
-                <li><a href="#" class="text-lg font-medium hover:text-gray-300">Nosotros</a></li>
                 <li><a href="#ofertas" class="text-lg font-medium hover:text-gray-300">Ofertas</a></li>
+                <li><a href="#sobre-nosotros" class="text-lg font-medium hover:text-gray-300">Nosotros</a></li>
                 <li><a href="/logout" class="nav-link bg-red-500 hover:bg-red-700 py-2 px-4 rounded-md">Salir</a></li>
             </ul>            
         </nav>
@@ -110,6 +110,119 @@
     <!-- Modal del Carrito -->
     <div class="modal-overlay" id="modal-overlay"></div>
     <div class="modal-container" id="modal-container"></div>
+
+    <!--Sobre Nosotros-->
+  <section id="sobre-nosotros">
+    <div class="header">
+        <h2>Equipo Code Masters</h2>
+        <p>Conoce al equipo detrás de CodeMasters.</p>
+    </div>
+    <div class="team-container">
+        <div class="team-member">
+            <div class="image-container">
+                <img src="media/img/Juli.jpeg" alt="Julieta">
+            </div>
+            <h3>Aguilera Julieta</h3>
+            <div class="social-buttons">
+                 <a href="mailto:aguilerajulieta700@gmail.com" class="btn gmail">
+                 <i class="fab fa-google"></i>
+             </a>
+                 <a href="https://github.com/julietaagui" class="btn github" target="_blank">
+                 <i class="fab fa-github"></i>
+             </a>
+                 <a href="https://www.linkedin.com/in/julieta-aguilera-947231321/" class="btn linkedin" target="_blank">
+                 <i class="fab fa-linkedin"></i>
+             </a>
+            </div>
+        </div>
+        <div class="team-member">
+            <div class="image-container">
+                <img src="media/img/Ignacio.jpeg" alt="Ignacio">
+            </div>
+            <h3>Bala Ignacio</h3>
+            <div class="social-buttons">
+                <a href="mailto:zuloagabala@gmail.com" class="btn gmail">
+                <i class="fab fa-google"></i>
+            </a>
+                <a href="https://github.com/IgnacioBala" class="btn github" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+                <a href="www.linkedin.com/in/ignacio-bala-a0544a21b" class="btn linkedin" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            </div>
+        </div>
+        <div class="team-member">
+            <div class="image-container">
+                <img src="media/img/Luciana.jpeg" alt="Luciana">
+            </div>
+            <h3>Castro Luciana</h3>
+            <div class="social-buttons">
+                 <a href="mailto:cluciana615qgmail.com" class="btn gmail">
+                 <i class="fab fa-google"></i>
+             </a>
+                 <a href="https://github.com/LucianaCastro615" class="btn github" target="_blank">
+                 <i class="fab fa-github"></i>
+             </a>
+                 <a href="https://linkedin.com/in/usuario1" class="btn linkedin" target="_blank">
+                 <i class="fab fa-linkedin"></i>
+             </a>
+            </div>
+        </div>
+        <div class="team-member">
+            <div class="image-container">
+                <img src="media/img/Virginia.jpeg" alt="Virginia">
+            </div>
+            <h3>Castellano Virginia</h3>
+             <div class="social-buttons">
+                 <a href="mailto:vcastellano140@gmail.com" class="btn gmail">
+                 <i class="fab fa-google"></i>
+              </a>
+                 <a href="https://github.com/virginiacastellano" class="btn github" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+                 <a href="https://www.linkedin.com/in/virginia-castellano/" class="btn linkedin" target="_blank">
+                 <i class="fab fa-linkedin"></i>
+              </a>
+            </div>
+        </div >
+        <div class="team-member">
+            <div class="image-container">
+                <img src="media/img/Lucia.jpeg" alt="Lucia">
+            </div>
+            <h3>Guajardo Lucia</h3>
+            <div class="social-buttons">
+                <a href="mailto:luguajardo18Qgmail.com" class="btn gmail">
+                <i class="fab fa-google"></i>
+             </a>
+                <a href="https://github.com/LuciiG" class="btn github" target="_blank">
+               <i class="fab fa-github"></i>
+             </a>
+                <a href="https://linkedin.com/in/usuario1" class="btn linkedin" target="_blank">
+                <i class="fab fa-linkedin"></i>
+             </a>
+           </div>
+        </div>
+        <div class="team-member">
+            <div class="image-container">
+                <img src="media/img/Romina.jpeg" alt="Romina">
+            </div>
+            <h3>Rodriguez Romina</h3>
+            <div class="social-buttons">
+                <a href="mailto:romirodrigez13@gmail.com" class="btn gmail">
+                <i class="fab fa-google"></i>
+             </a>
+                <a href="https://github.com/Romy-13" class="btn github" target="_blank">
+               <i class="fab fa-github"></i>
+             </a>
+                <a href="https://linkedin.com/in/usuario1" class="btn linkedin" target="_blank">
+                <i class="fab fa-linkedin"></i>
+             </a>
+           </div>
+            
+        </div>
+    </div>
+  </section>
 
     <!-- Scripts -->
     <script src="js/products.js"></script>
